// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`languages: javascript 1`] = `
Array [
  Object {
    "extension": ".js",
    "gist": Object {
      "name": "schema",
      "source": "const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`
",
    },
    "lang": Object {
      "end": /\\\\/\\\\\\*\\\\s\\*resk end\\\\s\\*\\\\\\*\\\\//,
      "extensions": Array [
        ".js",
        ".jsx",
      ],
      "formatter": [Function],
      "gistter": [Function],
      "start": /\\\\/\\\\\\*\\\\s\\*resk start\\\\s\\+\\\\"\\(\\.\\+\\)\\\\"\\\\s\\*\\\\\\*\\\\//,
    },
    "source": "/* resk start \\"schema\\" */
const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`

/* resk end */

const resolvers = {
  Query: {
    frontPage: () => [
      { name: 'orange', count: 10 },
      { name: 'apple', count: 1 },
    ],
    fruits: () => {
      /* resk start \\"fruits\\" */
      const fruits = [
        { name: 'orange', count: 10 },
        { name: 'apple', count: 1 },
        { name: 'strawberries', count: 100 },
      ]
      /* resk end */

      return fruits
    },
    customers: () => [
      { id: 1, basket: [{ name: 'orange', count: 1 }] },
      { id: 2, basket: [{ name: 'apple', count: 2 }] },
    ],
  },
  Mutation: {
    addFruitToBasket: () => true,
  },
}

// Auth
/* resk start \\"users\\" */
const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
/* resk end */

function getUser(req) {
  const auth = req.get('Authorization')
  if (users[auth]) {
    return users[auth]
  } else {
    return null
  }
}
",
  },
  Object {
    "extension": ".js",
    "gist": Object {
      "name": "fruits",
      "source": "const fruits = [
  { name: 'orange', count: 10 },
  { name: 'apple', count: 1 },
  { name: 'strawberries', count: 100 },
]
",
    },
    "lang": Object {
      "end": /\\\\/\\\\\\*\\\\s\\*resk end\\\\s\\*\\\\\\*\\\\//,
      "extensions": Array [
        ".js",
        ".jsx",
      ],
      "formatter": [Function],
      "gistter": [Function],
      "start": /\\\\/\\\\\\*\\\\s\\*resk start\\\\s\\+\\\\"\\(\\.\\+\\)\\\\"\\\\s\\*\\\\\\*\\\\//,
    },
    "source": "/* resk start \\"schema\\" */
const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`

/* resk end */

const resolvers = {
  Query: {
    frontPage: () => [
      { name: 'orange', count: 10 },
      { name: 'apple', count: 1 },
    ],
    fruits: () => {
      /* resk start \\"fruits\\" */
      const fruits = [
        { name: 'orange', count: 10 },
        { name: 'apple', count: 1 },
        { name: 'strawberries', count: 100 },
      ]
      /* resk end */

      return fruits
    },
    customers: () => [
      { id: 1, basket: [{ name: 'orange', count: 1 }] },
      { id: 2, basket: [{ name: 'apple', count: 2 }] },
    ],
  },
  Mutation: {
    addFruitToBasket: () => true,
  },
}

// Auth
/* resk start \\"users\\" */
const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
/* resk end */

function getUser(req) {
  const auth = req.get('Authorization')
  if (users[auth]) {
    return users[auth]
  } else {
    return null
  }
}
",
  },
  Object {
    "extension": ".js",
    "gist": Object {
      "name": "users",
      "source": "const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
",
    },
    "lang": Object {
      "end": /\\\\/\\\\\\*\\\\s\\*resk end\\\\s\\*\\\\\\*\\\\//,
      "extensions": Array [
        ".js",
        ".jsx",
      ],
      "formatter": [Function],
      "gistter": [Function],
      "start": /\\\\/\\\\\\*\\\\s\\*resk start\\\\s\\+\\\\"\\(\\.\\+\\)\\\\"\\\\s\\*\\\\\\*\\\\//,
    },
    "source": "/* resk start \\"schema\\" */
const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`

/* resk end */

const resolvers = {
  Query: {
    frontPage: () => [
      { name: 'orange', count: 10 },
      { name: 'apple', count: 1 },
    ],
    fruits: () => {
      /* resk start \\"fruits\\" */
      const fruits = [
        { name: 'orange', count: 10 },
        { name: 'apple', count: 1 },
        { name: 'strawberries', count: 100 },
      ]
      /* resk end */

      return fruits
    },
    customers: () => [
      { id: 1, basket: [{ name: 'orange', count: 1 }] },
      { id: 2, basket: [{ name: 'apple', count: 2 }] },
    ],
  },
  Mutation: {
    addFruitToBasket: () => true,
  },
}

// Auth
/* resk start \\"users\\" */
const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
/* resk end */

function getUser(req) {
  const auth = req.get('Authorization')
  if (users[auth]) {
    return users[auth]
  } else {
    return null
  }
}
",
  },
]
`;

exports[`languages: typescript 1`] = `
Array [
  Object {
    "extension": ".ts",
    "gist": Object {
      "name": "schema",
      "source": "const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`
",
    },
    "lang": Object {
      "end": /\\\\/\\\\\\*\\\\s\\*resk end\\\\s\\*\\\\\\*\\\\//,
      "extensions": Array [
        ".ts",
        ".tsx",
      ],
      "formatter": [Function],
      "gistter": [Function],
      "start": /\\\\/\\\\\\*\\\\s\\*resk start\\\\s\\+\\\\"\\(\\.\\+\\)\\\\"\\\\s\\*\\\\\\*\\\\//,
    },
    "source": "/* resk start \\"schema\\" */
const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`
/* resk end */

const resolvers = {
  Query: {
    frontPage: () => [
      { name: 'orange', count: 10 },
      { name: 'apple', count: 1 },
    ],
    fruits: () => {
      /* resk start \\"fruits\\" */
      const fruits = [
        { name: 'orange', count: 10 },
        { name: 'apple', count: 1 },
        { name: 'strawberries', count: 100 },
      ]
      /* resk end */

      return fruits
    },
    customers: () => [
      { id: 1, basket: [{ name: 'orange', count: 1 }] },
      { id: 2, basket: [{ name: 'apple', count: 2 }] },
    ],
  },
  Mutation: {
    addFruitToBasket: () => true,
  },
}

// Auth
/* resk start \\"users\\" */
const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
/* resk end */

function getUser(req) {
  const auth = req.get('Authorization')
  if (users[auth]) {
    return users[auth]
  } else {
    return null
  }
}
",
  },
  Object {
    "extension": ".ts",
    "gist": Object {
      "name": "fruits",
      "source": "const fruits = [
  { name: 'orange', count: 10 },
  { name: 'apple', count: 1 },
  { name: 'strawberries', count: 100 },
]
",
    },
    "lang": Object {
      "end": /\\\\/\\\\\\*\\\\s\\*resk end\\\\s\\*\\\\\\*\\\\//,
      "extensions": Array [
        ".ts",
        ".tsx",
      ],
      "formatter": [Function],
      "gistter": [Function],
      "start": /\\\\/\\\\\\*\\\\s\\*resk start\\\\s\\+\\\\"\\(\\.\\+\\)\\\\"\\\\s\\*\\\\\\*\\\\//,
    },
    "source": "/* resk start \\"schema\\" */
const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`
/* resk end */

const resolvers = {
  Query: {
    frontPage: () => [
      { name: 'orange', count: 10 },
      { name: 'apple', count: 1 },
    ],
    fruits: () => {
      /* resk start \\"fruits\\" */
      const fruits = [
        { name: 'orange', count: 10 },
        { name: 'apple', count: 1 },
        { name: 'strawberries', count: 100 },
      ]
      /* resk end */

      return fruits
    },
    customers: () => [
      { id: 1, basket: [{ name: 'orange', count: 1 }] },
      { id: 2, basket: [{ name: 'apple', count: 2 }] },
    ],
  },
  Mutation: {
    addFruitToBasket: () => true,
  },
}

// Auth
/* resk start \\"users\\" */
const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
/* resk end */

function getUser(req) {
  const auth = req.get('Authorization')
  if (users[auth]) {
    return users[auth]
  } else {
    return null
  }
}
",
  },
  Object {
    "extension": ".ts",
    "gist": Object {
      "name": "users",
      "source": "const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
",
    },
    "lang": Object {
      "end": /\\\\/\\\\\\*\\\\s\\*resk end\\\\s\\*\\\\\\*\\\\//,
      "extensions": Array [
        ".ts",
        ".tsx",
      ],
      "formatter": [Function],
      "gistter": [Function],
      "start": /\\\\/\\\\\\*\\\\s\\*resk start\\\\s\\+\\\\"\\(\\.\\+\\)\\\\"\\\\s\\*\\\\\\*\\\\//,
    },
    "source": "/* resk start \\"schema\\" */
const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`
/* resk end */

const resolvers = {
  Query: {
    frontPage: () => [
      { name: 'orange', count: 10 },
      { name: 'apple', count: 1 },
    ],
    fruits: () => {
      /* resk start \\"fruits\\" */
      const fruits = [
        { name: 'orange', count: 10 },
        { name: 'apple', count: 1 },
        { name: 'strawberries', count: 100 },
      ]
      /* resk end */

      return fruits
    },
    customers: () => [
      { id: 1, basket: [{ name: 'orange', count: 1 }] },
      { id: 2, basket: [{ name: 'apple', count: 2 }] },
    ],
  },
  Mutation: {
    addFruitToBasket: () => true,
  },
}

// Auth
/* resk start \\"users\\" */
const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
/* resk end */

function getUser(req) {
  const auth = req.get('Authorization')
  if (users[auth]) {
    return users[auth]
  } else {
    return null
  }
}
",
  },
]
`;

exports[`loads the file correctly 1`] = `
Object {
  "extension": ".ts",
  "lang": Object {
    "end": /\\\\/\\\\\\*\\\\s\\*resk end\\\\s\\*\\\\\\*\\\\//,
    "extensions": Array [
      ".ts",
      ".tsx",
    ],
    "formatter": [Function],
    "gistter": [Function],
    "start": /\\\\/\\\\\\*\\\\s\\*resk start\\\\s\\+\\\\"\\(\\.\\+\\)\\\\"\\\\s\\*\\\\\\*\\\\//,
  },
  "source": "/* resk start \\"schema\\" */
const typeDefs = \`
  type Query {
    frontPage: [Fruit!]!
    fruits: [Fruit!]!
    customers: [Customer!]!
  }
  type Mutation {
    addFruitToBasket: Boolean!
  }
  type Fruit {
    name: String!
    count: Int!
  }
  type Customer {
    id: ID!
    basket: [Fruit!]!
  }
\`
/* resk end */

const resolvers = {
  Query: {
    frontPage: () => [
      { name: 'orange', count: 10 },
      { name: 'apple', count: 1 },
    ],
    fruits: () => {
      /* resk start \\"fruits\\" */
      const fruits = [
        { name: 'orange', count: 10 },
        { name: 'apple', count: 1 },
        { name: 'strawberries', count: 100 },
      ]
      /* resk end */

      return fruits
    },
    customers: () => [
      { id: 1, basket: [{ name: 'orange', count: 1 }] },
      { id: 2, basket: [{ name: 'apple', count: 2 }] },
    ],
  },
  Mutation: {
    addFruitToBasket: () => true,
  },
}

// Auth
/* resk start \\"users\\" */
const users = {
  mathew: {
    id: 1,
    name: 'Mathew',
    role: 'admin',
  },
  george: {
    id: 2,
    name: 'George',
    role: 'editor',
  },
  johnny: {
    id: 3,
    name: 'Johnny',
    role: 'customer',
  },
}
/* resk end */

function getUser(req) {
  const auth = req.get('Authorization')
  if (users[auth]) {
    return users[auth]
  } else {
    return null
  }
}
",
}
`;
